--- a/Lab_7.ipynb
+++ b/Lab_7.ipynb
@@ -55,24 +55,39 @@
       "cell_type": "code",
       "source": [
         "def add_score(subject_score, subject, score):\n",
-        "  pass\n",
-        "\n",
+        "    subject_score[subject] = score\n",
+        "    return subject_score\n",
         "dict = {}\n",
         "add_score(dict, 'python', 50) # => {'python' : 50}\n",
         "add_score(dict, 'calculus', 60) # => {'python' : 50, 'calculus' : 60}\n",
         "print(dict)\n",
         "\n",
         "def calc_average_score(subject_score):\n",
-        "  pass\n",
+        "    l = [i for i in subject_score.values()]\n",
+        "    sum =(l[0]+l[1])/len(l)\n",
         "\n",
-        "calc_average_score(dict)\n",
+        "    return sum\n",
+        "print(f\"{calc_average_score(dict):.2f}\")\n",
         "# calc_average_score({ 'python' : 50, 'calculus' : 60 }) => '55.00'\n"
       ],
       "metadata": {
-        "id": "LZGVVZVj3hLN"
+        "id": "LZGVVZVj3hLN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be9d0f73-06f4-4dd8-a905-4bffed582224"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'python': 50, 'calculus': 60}\n",
+            "55.00\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -95,23 +110,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
-        "id": "QmJLbNje10SA"
+        "id": "QmJLbNje10SA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2de3892a-99fd-48bf-d05d-0b552573c901"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'65010001': '65.00', '65010002': '70.00', '65010003': '80.00'}\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'65010001': {'python': 50, 'calculus': 60, 'DC': 70, 'Digital': 80},\n",
+              " '65010002': {'dc': 70},\n",
+              " '65010003': {'calculus': 80}}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ],
       "source": [
         "def add_score(subject_score, student, subject, score):\n",
-        "  pass\n",
+        "   if student not in subject_score:\n",
+        "      subject = subject.lower()\n",
+        "      subject_score[student]={}\n",
+        "   subject_score[student][subject] = score\n",
+        "   return subject_score\n",
+        "def calc_average_score(subject_score):\n",
+        "    for i,j in subject_score.items():\n",
+        "        total = sum(j.values())\n",
+        "        everate = total/len(j)\n",
+        "        subject_score[i]='{:.2f}'.format(everate)\n",
+        "    return subject_score\n",
+        "print(calc_average_score(dict)) # => {'65010001': '55.00' }\n",
         "\n",
         "dict = {}\n",
         "add_score(dict, '65010001', 'python', 50) # => {'65010001' : { 'python' : 50 } }\n",
         "add_score(dict, '65010001', 'calculus', 60) # => {'65010001' : { 'python' : 50, 'calculus' : 60 }\n",
-        "\n",
-        "def calc_average_score(subject_score):\n",
-        "  pass\n",
-        "\n",
-        "calc_average_score(dict) # => {'65010001': '55.00' }\n"
+        "add_score(dict, '65010002', 'DC', 70) # => {'65010001' : { 'python' : 50, 'calculus' : 60 }\n",
+        "add_score(dict, '65010001', 'DC', 70) # => {'65010001' : { 'python' : 50, 'calculus' : 60 }\n",
+        "add_score(dict, '65010001', 'Digital', 80) # => {'65010001' : { 'python' : 50, 'calculus' : 60 }\n",
+        "add_score(dict, '65010003', 'calculus', 80) # => {'65010001' : { 'python' : 50, 'calculus' : 60 }"
       ]
     },
     {
@@ -285,24 +334,24 @@
       ],
       "metadata": {
         "id": "ZP-9-SVeEJn6",
-        "outputId": "43d388ef-4b65-44f6-99c0-8963a40ac708",
+        "outputId": "ee43e66e-0846-4a84-df8c-05f33f27d063",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'Python67'...\n",
-            "remote: Enumerating objects: 30, done.\u001b[K\n",
-            "remote: Counting objects:   3% (1/30)\u001b[K\rremote: Counting objects:   6% (2/30)\u001b[K\rremote: Counting objects:  10% (3/30)\u001b[K\rremote: Counting objects:  13% (4/30)\u001b[K\rremote: Counting objects:  16% (5/30)\u001b[K\rremote: Counting objects:  20% (6/30)\u001b[K\rremote: Counting objects:  23% (7/30)\u001b[K\rremote: Counting objects:  26% (8/30)\u001b[K\rremote: Counting objects:  30% (9/30)\u001b[K\rremote: Counting objects:  33% (10/30)\u001b[K\rremote: Counting objects:  36% (11/30)\u001b[K\rremote: Counting objects:  40% (12/30)\u001b[K\rremote: Counting objects:  43% (13/30)\u001b[K\rremote: Counting objects:  46% (14/30)\u001b[K\rremote: Counting objects:  50% (15/30)\u001b[K\rremote: Counting objects:  53% (16/30)\u001b[K\rremote: Counting objects:  56% (17/30)\u001b[K\rremote: Counting objects:  60% (18/30)\u001b[K\rremote: Counting objects:  63% (19/30)\u001b[K\rremote: Counting objects:  66% (20/30)\u001b[K\rremote: Counting objects:  70% (21/30)\u001b[K\rremote: Counting objects:  73% (22/30)\u001b[K\rremote: Counting objects:  76% (23/30)\u001b[K\rremote: Counting objects:  80% (24/30)\u001b[K\rremote: Counting objects:  83% (25/30)\u001b[K\rremote: Counting objects:  86% (26/30)\u001b[K\rremote: Counting objects:  90% (27/30)\u001b[K\rremote: Counting objects:  93% (28/30)\u001b[K\rremote: Counting objects:  96% (29/30)\u001b[K\rremote: Counting objects: 100% (30/30)\u001b[K\rremote: Counting objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (28/28), done.\u001b[K\n",
-            "remote: Total 30 (delta 9), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (30/30), 12.31 MiB | 14.07 MiB/s, done.\n",
-            "Resolving deltas: 100% (9/9), done.\n"
+            "remote: Enumerating objects: 33, done.\u001b[K\n",
+            "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (31/31), done.\u001b[K\n",
+            "remote: Total 33 (delta 11), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (33/33), 12.32 MiB | 10.30 MiB/s, done.\n",
+            "Resolving deltas: 100% (11/11), done.\n"
           ]
         }
       ]
@@ -314,12 +363,12 @@
       ],
       "metadata": {
         "id": "N3vz_VW7dPVD",
-        "outputId": "554dc51c-ad62-401e-8eb2-b0b4d1138325",
+        "outputId": "abacd665-396f-45d6-f03d-70ff37facee7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
