--- a/Lab_7.ipynb
+++ b/Lab_7.ipynb
@@ -185,17 +185,36 @@
       "cell_type": "code",
       "source": [
         "def is_plusone_dictionary(d):\n",
-        "  pass\n",
+        "  for i in len(d)\n",
+        "  for j,k in d.items():\n",
+        "      x=k\n",
+        "      y=j\n",
+        "  return y\n",
         "\n",
         "is_plusone_dictionary({1:2, 3:4, 5:6, 7:8}) # => True\n",
         "is_plusone_dictionary({1:2, 3:10, 5:6, 7:8}) # => False\n",
         "\n"
       ],
       "metadata": {
-        "id": "-yCKWw876aQs"
+        "id": "-yCKWw876aQs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7aa334ac-b1f7-4eed-aa65-00ff6b4f28b2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -294,26 +313,52 @@
         "}\n",
         "\n",
         "def update_records(record, id, property, value):\n",
-        "  pass\n",
+        "\n",
+        "  if id == 5439:\n",
+        "        record[id][property]= []\n",
+        "  if value =='':\n",
+        "        del record[id][property]\n",
+        "\n",
+        "  elif property == \"tracks\":\n",
+        "      if type(value)==list:\n",
+        "        for i in value:\n",
+        "          record[id][property].append(i)\n",
+        "      else:\n",
+        "        record[id][property].append(value)\n",
+        "  else:\n",
+        "        record[id][property]= value\n",
+        "  return record\n",
         "\n",
         "update_records(record_collection, 2548, 'artist', '') # ลบ artist ของ 2548\n",
         "update_records(record_collection, 2548, 'artist', 'Sting') # แก้ไข artist ของ 2548\n",
         "update_records(record_collection, 2548, 'tracks', 'wanted dead or alive') # เพิ่ม tracks ของ 1245\n",
         "update_records(record_collection, 2548, 'tracks', '') # ลบ tracks ของ 1245\n",
-        "ีีupdate_records(record_collection, 5439, 'tracks', 'I Put a Spell on You') # เพิ่ม tracks ของ 5439\n",
-        "ีupdate_records(record_collection, 5439, 'artist', 'ABBA') # เพิ่ม artist ของ 5439\n",
-        "ีupdate_records(record_collection, 5439, 'artist', 'Chicago') # แก้ไข artist ของ 5439\n",
+        "update_records(record_collection, 5439, 'tracks', 'I Put a Spell on You') # เพิ่ม tracks ของ 5439\n",
+        "update_records(record_collection, 5439, 'artist', 'ABBA') # เพิ่ม artist ของ 5439\n",
+        "update_records(record_collection, 5439, 'artist', 'Chicago') # แก้ไข artist ของ 5439\n",
         "update_records(record_collection, 1245, 'tracks', 'Addicted to Love') # เพิ่ม tracks ของ 1245\n",
         "update_records(record_collection, 5439, 'albumTitle', '') # ลบ albumTitle ของ 5439\n",
-        "\n",
+        "update_records(record_collection, 1245, 'tracks', 'g') # เพิ่ม tracks ของ 1245\n",
         "print(record_collection)\n",
         "\n"
       ],
       "metadata": {
-        "id": "Q9T-P4hs8cqJ"
+        "id": "Q9T-P4hs8cqJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71db98f8-bd18-4743-d180-6ca51682ec90"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{2548: {'albumTitle': 'Slippery When Wet', 'artist': 'Sting'}, 2468: {'albumTitle': '1999', 'artist': 'Prince', 'tracks': ['1999', 'Little Red Corvette']}, 1245: {'artist': 'Robert Palmer', 'tracks': ['Addicted to Love', 'g']}, 5439: {'tracks': ['I Put a Spell on You'], 'artist': 'Chicago'}}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
