--- a/Lab_7.ipynb
+++ b/Lab_7.ipynb
@@ -77,7 +77,7 @@
         },
         "outputId": "be9d0f73-06f4-4dd8-a905-4bffed582224"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "QmJLbNje10SA",
         "colab": {
@@ -202,7 +202,7 @@
         },
         "outputId": "7aa334ac-b1f7-4eed-aa65-00ff6b4f28b2"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,7 +349,7 @@
         },
         "outputId": "71db98f8-bd18-4743-d180-6ca51682ec90"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,16 +375,77 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/khthana/Python67/"
+        "\n",
+        "from pathlib import Path\n",
+        "import os\n",
+        "path_str = '/content/Python67/Dataset/thai-handwritten-dataset/'\n",
+        "p = Path(path_str)\n",
+        "print(\"จากโฟลเดอร์คือ thai-handwritten-dataset\")\n",
+        "folder_list = [dir for r,dir,files in os.walk(p)]\n",
+        "all_folder = folder_list[0]\n",
+        "folder_count = len(folder_list[0])\n",
+        "print('มีลิลต์โฟลเดอร์ทั้งหมด :',folder_count,\"คือ\",all_folder)\n",
+        "file =[files for r,dir,files in os.walk(p)]\n",
+        "print('และมีไฟล์ ReadME.md และ อื่นๆ:',len(file[0]))\n",
+        "count_file = 0\n",
+        "total_size = 0\n",
+        "for j in range(len(all_folder)):\n",
+        "    count = 0\n",
+        "    for i in file[j+1]:\n",
+        "      count += 1\n",
+        "    path_current = path_str+str(all_folder[j])\n",
+        "    path_size = os.path.getsize(path_current)\n",
+        "    print(f'ไฟล์ที่ {j} มีทั้งหมด {count} และมีขนาดไฟล์ {path_size}')\n",
+        "    total_size += path_size\n",
+        "    count_file += count\n",
+        "print('มีไฟล์ ทั้งหมด :',count_file)\n",
+        "print('ขนาดทั้งหมดคือ :',total_size)"
       ],
       "metadata": {
-        "id": "ZP-9-SVeEJn6",
-        "outputId": "ee43e66e-0846-4a84-df8c-05f33f27d063",
+        "id": "3-3UN6S9G3NV",
+        "outputId": "0877c22f-731b-440e-e0a7-495bb36559ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "จากโฟลเดอร์คือ thai-handwritten-dataset\n",
+            "มีลิลต์โฟลเดอร์ทั้งหมด : 10 คือ ['2', '4', '6', '8', '0', '3', '5', '1', '9', '7']\n",
+            "และมีไฟล์ ReadME.md และ อื่นๆ: 1\n",
+            "ไฟล์ที่ 0 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 1 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 2 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 3 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 4 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 5 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 6 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 7 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 8 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "ไฟล์ที่ 9 มีทั้งหมด 175 และมีขนาดไฟล์ 16384\n",
+            "มีไฟล์ ทั้งหมด : 1750\n",
+            "ขนาดทั้งหมดคือ : 163840\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/khthana/Python67/"
+      ],
+      "metadata": {
+        "id": "ZP-9-SVeEJn6",
+        "outputId": "b256f913-6ab9-4641-fd51-aa942af6e5bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,9 +454,9 @@
             "Cloning into 'Python67'...\n",
             "remote: Enumerating objects: 33, done.\u001b[K\n",
             "remote: Counting objects: 100% (33/33), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (31/31), done.\u001b[K\n",
-            "remote: Total 33 (delta 11), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (33/33), 12.32 MiB | 10.30 MiB/s, done.\n",
+            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
+            "remote: Total 33 (delta 11), reused 27 (delta 9), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (33/33), 12.32 MiB | 31.16 MiB/s, done.\n",
             "Resolving deltas: 100% (11/11), done.\n"
           ]
         }
@@ -408,12 +469,12 @@
       ],
       "metadata": {
         "id": "N3vz_VW7dPVD",
-        "outputId": "abacd665-396f-45d6-f03d-70ff37facee7",
+        "outputId": "11f12372-031c-4ed6-f789-da67e3926184",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
